# Intelligent-Feature-Registry

./: .eslintrc.json  .gitignore  .npmrc  CLAUDE.md  cdk.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: troubleshooting-zscaler-docker-ssl.md
docs/adr/: 0001-api-first-design-sdk-thin-wrapper.md  0001-qa-prep.md
infra/: api-stack.ts  data-stack.ts  intel-feature-registry.ts  intelligent-feature-registry.ts  intelligent-gateway.ts  lambda-stack.ts
scripts/: demo.py
src/functions/api/delete_profile/: handler.py
src/functions/api/list_models/: handler.py
src/functions/api/lookup_profile/: handler.py
src/functions/api/register_profile/: handler.py
src/functions/jobs/provision_profile/: handler.py
src/layers/shared/: pyproject.toml
src/layers/shared/domain/: log.py
src/layers/shared/domain/common/: controller.py  error.py
src/layers/shared/ncino/: handler.py  role_session.py
tests/integration/: conftest.py  test_delete_profile.py  test_list_models.py  test_lookup_profile.py  test_profile_lifecycle.py  test_register_profile.py
tests/unit/functions/api/delete_profile/: test_handler.py
tests/unit/functions/api/list_models/: test_handler.py
tests/unit/functions/api/lookup_profile/: test_handler.py
tests/unit/functions/api/register_profile/: test_handler.py
tests/unit/functions/jobs/provision_profile/: test_handler.py
