[project]
name = "intelligent-gateway"
version = "0.1.0"
description = "Intelligent Gateway - Bedrock inference profile provisioning platform"
authors = []
readme = { text = "", content-type = "text/markdown" }
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.37.28",
    "aws-lambda-powertools>=2.38.1",
    "ulid-py>=1.1.0",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "ruff==0.11.12",
    "pytest-cov>=4.1.0",
    "requests>=2.31.0",
]

[tool.uv.sources]
shared = { path = "src/layers/shared", editable = true }

[tool.ruff]
extend-exclude = ["cdk.out"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "integration: Integration tests that hit a deployed API (require INTEL_GATEWAY_API_URL)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/layers/shared/ncino/role_session.py"]

[tool.coverage.report]
skip_empty = true
fail_under = 90

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
